--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <h3 class="margin-small">6:00 p.m.</h3>
         <p>Wedding ceremony and reception will be held at the lovely Meadow Brook Hall</p>
         <div class="text-right margin-small">
-          <a class="button" href="https://maps.google.com/maps/dir/''/Meadow+Brook+Hall+%26+Gardens,+350+Estate+Drive,+Rochester+Hills,+MI+48309/@42.6721634,-83.2714854,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x8824ea64b3f256b3:0x6cc3b14051748759!2m2!1d-83.2014455!2d42.6721847">Get Directions</a>
+          <a class="button" href="https://maps.google.com/maps/dir//Meadow+Brook+Hall+%26+Gardens,+350+Estate+Drive,+Rochester+Hills,+MI+48309/@42.6722309,-83.2036022,17z/data=!4m9!4m8!1m0!1m5!1m1!1s0x8824ea64b3f256b3:0x6cc3b14051748759!2m2!1d-83.2014455!2d42.6721847!3e0">Get Directions</a>
         </div>
       </div>
 
