--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
       <div class="content-right">
         <div class="embed-responsive">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2933.486736814324!2d-83.2036022495187!3d42.67223092906488!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8824ea64b3f256b3%3A0x6cc3b14051748759!2sMeadow+Brook+Hall+%26+Gardens%2C+350+Estate+Drive%2C+Rochester+Hills%2C+MI+48309!5e0!3m2!1sen!2sus!4v1514592379436"></iframe>
+          <iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2933.486736814324!2d-83.2036022495187!3d42.67223092906488!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8824ea64b3f256b3%3A0x6cc3b14051748759!2sMeadow+Brook+Hall+%26+Gardens%2C+350+Estate+Drive%2C+Rochester+Hills%2C+MI+48309!5e0!3m2!1sen!2sus!4v1514592379436"></iframe>
         </div>
       </div>
     </section>
