--- a/hotel-info.html
+++ b/hotel-info.html
@@ -51,7 +51,7 @@
         <h2 class="text-center">Hilton Auburn Hills Suites</h2>
         <img class="img-responsive img-padding" src="https://user-images.githubusercontent.com/13243031/34322624-4dded1d6-e7fa-11e7-85d9-7aac37bd44d3.jpg" />
 
-        <h4 class="text-center">2300 Featherston Road, Auburn Hills, MI 48326</h4>
+        <h4 class="text-center">2300 Featherstone Road, Auburn Hills, MI 48326</h4>
         <h4 class="text-center">$134.00 per night (Includes breakfast)</h4>
 
         <div class="text-center">
